--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://github.com/diego2k22" target="_blank">
+        <a href="https://instagram.com" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
         <a href="https://youtube.com.br" target="_blank">
